# langchain-canvas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.ko.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  publish.yml
apps/server/: .env.example  pyproject.toml
apps/server/app/: main.py
apps/server/app/agent/: build.py  tools.py
apps/server/app/routes/: chat.py
apps/web/: .env.example  next.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/chat/: route.ts
apps/web/app/chat/: page.tsx
apps/web/app/replay/: page.tsx
apps/web/components/: BrandLogo.tsx  Chat.tsx  TopNav.tsx
docs/: 01-architecture.md  02-protocol.md  03-getting-started.md
