[project]
name = "langchain-canvas-server"
version = "0.1.0"
description = "Reference FastAPI server for @langchain-canvas."
requires-python = ">=3.11"
dependencies = [
    "langchain-canvas",
    "langchain-anthropic>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
]

[tool.uv.sources]
langchain-canvas = { path = "../../packages/canvas-py", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
